# more.transaction

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.txt  CREDITS.txt  README.rst  buildout.cfg  develop_requirements.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
more/transaction/: __init__.py  compat.py  main.py
more/transaction/tests/: test_default_commit_veto.py  test_transaction.py
